welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:18: error: not found: value levebrosse
  levebrosse()
  ^PatternPicture:67: error: not found: value defmotifVert
defmotifVert(c:Color){
^